[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/minigames/speedrunner/PlatformGenerator.gd" type="Script" id=1]
[ext_resource path="res://scenes/minigames/speedrunner/NoiseLocationFinder.gd" type="Script" id=2]
[ext_resource path="res://scenes/minigames/speedrunner/LoadTracker.gd" type="Script" id=3]
[ext_resource path="res://scenes/minigames/speedrunner/PlatformLoader.gd" type="Script" id=4]
[ext_resource path="res://assets/img/icons/pointer_1.png" type="Texture" id=6]
[ext_resource path="res://assets/img/normalmaps/nmap_rock_1.png" type="Texture" id=7]
[ext_resource path="res://scenes/minigames/speedrunner/Platform.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/minigames/2dplayer/2DPlayerMovingBody.gd" type="Script" id=9]
[ext_resource path="res://scenes/minigames/2dplayer/2DPlayerNode.gd" type="Script" id=10]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
noise = SubResource( 1 )

[sub_resource type="CapsuleShape2D" id=3]

[node name="Speedrunner" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="PlatformGenerator" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="PlatformLoader" type="Node2D" parent="PlatformGenerator"]
script = ExtResource( 4 )
platformScene = ExtResource( 8 )

[node name="NoiseLocationFinder" type="Node2D" parent="PlatformGenerator/PlatformLoader"]
script = ExtResource( 2 )
noiseTexture = SubResource( 2 )

[node name="LoadTracker" type="Node2D" parent="PlatformGenerator"]
script = ExtResource( 3 )
nodeToTrack = NodePath("../../2DPlayerNode/2DPlayerMovingBody/Camera2D")

[node name="2DPlayerNode" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="2DPlayerMovingBody" type="KinematicBody2D" parent="2DPlayerNode"]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="2DPlayerNode/2DPlayerMovingBody"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="2DPlayerNode/2DPlayerMovingBody"]
texture = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="2DPlayerNode/2DPlayerMovingBody"]
current = true
limit_top = -600
smoothing_enabled = true

[node name="RayCast2D" type="RayCast2D" parent="2DPlayerNode/2DPlayerMovingBody"]
cast_to = Vector2( 20, 0 )

[connection signal="initialize" from="PlatformGenerator" to="PlatformGenerator/PlatformLoader" method="_on_PlatformGenerator_initialize"]
[connection signal="initialize" from="PlatformGenerator" to="PlatformGenerator/LoadTracker" method="_on_PlatformGenerator_initialize"]
[connection signal="load_movement" from="PlatformGenerator/LoadTracker" to="PlatformGenerator/PlatformLoader" method="_on_LoadTracker_load_movement"]
